crates/plotnik-tests/tests/03-analyze/predicates/regex_multiline_flag.txt
Q = (identifier =~ /(?m:^x$)/)
------------------ DIAGNOSTICS -------------------
error: multiline mode is not supported because target engines disagree on line terminators
 --> query.ptk:1:23
  |
1 | Q = (identifier =~ /(?m:^x$)/)
  |                       ^
  |
help: spell line terminators explicitly; `^` and `$` always mean text start and end
-------------------- SYMBOLS ---------------------
